feat: conservative Java type resolution 구현
- Java type qualification 및 conservative assignability 보강
- project-local extends/implements hierarchy 기반 type compatibility 추가
- generic type variable, boxing/unboxing, primitive widening 처리
- overload resolution의 UNKNOWN/AMBIGUOUS 정책 보수화
- duplicate FQN hierarchy 및 generic array edge case 보강
- STEP 22/22B/22C regression test 추가 및 전체 654 tests 통과
- README를 현재 구현 범위에 맞게 한국어로 정리